--- a/4WindsPublishing/4WindsPublishing.html
+++ b/4WindsPublishing/4WindsPublishing.html
@@ -33,12 +33,12 @@
 </p><p>
 Titles
 </p><p>
-<li>Alvar Mayor: Death and Silver (1989)
-<li>Attu (1989)
-<li>Downtime (1989)
-<li>Moving Fortress (1988)
-<li>Subterra (1989)
-<li>Wilderness (1989)
+<li><a href="4Winds1.jpg">Alvar Mayor: Death and Silver</a> (1989)
+<li><a href="4Winds2.jpg">Attu</a> (1989)
+<li><a href="4Winds4.jpg">Downtime</a> (1989)
+<li><a href="4Winds5.jpg">Moving Fortress</a> (1988)
+<li><a href="4Winds6.jpg">Subterra</a> (1989)
+<li><a href="4Winds7.jpg">Wilderness</a> (1989)
 </p>
 
 </body>
