--- a/DrawnQuarterly/DrawnQuarterly.html
+++ b/DrawnQuarterly/DrawnQuarterly.html
@@ -316,7 +316,7 @@ Titles
 <li><a href="DrawnQuarterly111.jpg">Melvin Monster</a>   (2009) 
 <li><a href="DrawnQuarterly112.jpg">Moomin</a> (2012)
 <li><a href="DrawnQuarterly113.jpg">Mooncop</a>  (2016)
-<li><a href="DrawnQuarterly114.jpg">Mr. Jean: Free Comic Book Day Special</a> (2006) )  
+<li><a href="DrawnQuarterly114.jpg">Mr. Jean: Free Comic Book Day Special</a> (2006)
 <li><a href="DrawnQuarterly115.jpg">My Most Secret Desire</a> (1995)
 <li><a href="DrawnQuarterly116.jpg">My New York Diary</a> (1999)
 <li><a href="DrawnQuarterly117.jpg">Nancy: The John Stanley Library</a>  (2009) 
@@ -348,7 +348,7 @@ Titles
 <li><a href="DrawnQuarterly140.jpg">Red Colored Elegy</a>  (2008)    
 <li><a href="DrawnQuarterly141.jpg">Rolling Blackouts: Dispatches from Turkey, Syria, and Iraq</a> (2016)
 <li><a href="../DrnasoSabrina/DrnasoSabrina.html">Sabrina</a>  (2018)
-<li><a href="DrawnQuarterly142.jpg">Scenes from an Impending Marriage</a> (2011) 
+<li><a href="DrawnQuarterly142.jpg">Scenes From An Impending Marriage</a> (2011) 
 <li><a href="DrawnQuarterly143.jpg">Shenzhen: A Travelogue from China</a>  (2006) 
 <li><a href="DrawnQuarterly144.jpg">Shigeru Mizuki's Kitaro</a> (2016) 
 <li><a href="DrawnQuarterly145.jpg">Shigeru Mizuki's Showa: A History of Japan</a>  (2014)
@@ -367,7 +367,7 @@ Titles
 <li><a href="DrawnQuarterly5.jpg">SuperMutant Magic Academy</a> (2015)
 <li><a href="DrawnQuarterly156.jpg">Surviving Saskatoon</a> (2000) 
 <li><a href="DrawnQuarterly157.jpg">Thirteen Going On Eighteen</a> (2010) 
-<li><a href="DrawnQuarterly158.jpg">Tubby (2010) 
+<li><a href="DrawnQuarterly158.jpg">Tubby</a> (2010) 
 <li><a href="DrawnQuarterly159.jpg">Uncomfortably Happily</a> (2017)
 <li><a href="DrawnQuarterly160.jpg">Underwater</a> (1994)   
 <li><a href="DrawnQuarterly161.jpg">Unquotable Trump</a> (2017) 
