--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -193,7 +193,6 @@ Titles
 <li><a href="Fantagraphics19.jpg">Adventures of Venus</a> (2012)
 <li><a href="Fantagraphics20.jpg">Adventures on the Fringe</a> (1992)
 <li><a href="Fantagraphics21.jpg">Aesop's Fables</a> (1991)
-<li><a href="Fantagraphics22.jpg">An Age of License</a> (2014)
 <li><a href="Fantagraphics23.jpg">Alberta Breccia Library: Mort Cinder</a> (2018)
 <li><a href="../Alex/Alex.html">Alex</a> (1994)
 <li><a href="Fantagraphics24.jpg">Alexis</a> (1994)
@@ -205,6 +204,7 @@ Titles
 <li><a href="Fantagraphics30.jpg">All Waldo</a> (1992)
 <li><a href="../AmazingHeroes/AmazingHeroes.html">Amazing Heroes</a> (1981)
 <li><a href="../BenjaminMarra/BenjaminMarra.html">American Blood</a> (2016)
+<li><a href="Fantagraphics22.jpg">An Age of License</a> (2014)
 <li><a href="Fantagraphics31.jpg">Angry Youth Comix</a> (2001)
 <li><a href="Fantagraphics32.jpg">Anything Goes!</a> (1986)
 <li><a href="Fantagraphics33.jpg">Anywhere But Here</a> (2005)
@@ -337,7 +337,7 @@ Titles
 <li><a href="Fantagraphics133.jpg">Whot Not!</a> (1994)
 <li><a href="Fantagraphics134.jpg">Wipeout</a> (2003)
 <li><a href="Fantagraphics135.jpg">Wuvable Oaf</a> (2015)
-<li><a href="../JoeSacco/JoeSacco.html">Yahoo</a>
+<li><a href="../JoeSacco/JoeSacco.html">Yahoo</a> (1988)
 <li><a href="../Zap/zap.html">Zap</a> (2016)
 <li><a href="Fantagraphics136.jpg">Zero Zero</a> (1995)
 
