--- a/NarrativeCorpse/NarrativeCorpse.html
+++ b/NarrativeCorpse/NarrativeCorpse.html
@@ -19,7 +19,15 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NarrativeCorpse10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
