--- a/Innovation/Innovation.html
+++ b/Innovation/Innovation.html
@@ -15,14 +15,94 @@
 </div> </div>
 
 <div id="myModal" class="modal">
-<span class="close cursor" onclick="closeModal()">&amp;times;</span>
+<span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=".jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation76.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation79.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Innovation82.jpg"></div>
 
-
-<a class="prev" onclick="plusSlides(-1)">&amp;#10094;</a>
-<a class="next" onclick="plusSlides(1)">&amp;#10095;</a>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
 Innovation Publishing (also known as Innovation Books) was an American comic book company based in Wheeling, West Virginia. It was co-founded by David Campiti in 1988 after writing a business proposal and raising US$400,000 to finance its launch. Innovation became #4 in market share, below Marvel Comics, DC Comics, and Dark Horse Comics.
@@ -33,85 +113,88 @@ Innovation's original series included Angel Heat; Dangerous Secrets; Dream Angel
 </p><p>
 Titles
 </p><p>
-<li>3x3 Eyes (1991)
-<li>Ack the Barbarian  (1991)
-<li>Alex Nino’s Nightmare   (1989)
-<li>Alfred Hitchcock's Psycho   (1992)
-<li>All Hallow's Eve    (1991)
-<li>Angel of Death  (1991)
-<li>Angry Shadows   (1989)
-<li>Anne Rice's Interview with the Vampire      (1991)
-<li>Anne Rice's Queen of the Damned     (1991)
-<li>Anne Rice's The Vampire Lestat  (1990)
-<li>Avenue X    (1992)
-<li>Beauty and the Beast    (1993)
-<li>Bill Ward's Torchy      (1991)
-<li>Black &amp; White Magic     (1991)
-<li>Bruce Jones' Outer Edge     (1993)
-<li>Bruce Jones's Razor's Edge      (1993)
-<li>Cap'n Oatmeal   (1990)
-<li>Celestial Mechanics     (1990)
-<li>Child's Play 2      (1991)
-<li>Child's Play 3      (1991)
-<li>Child's Play The Series     (1991)
-<li>Cobalt Blue     (1989)
-<li>Cyberpunk   (1989)
-<li>Cyberpunk Book Two      (1990)
-<li>Cyberpunk Graphic Novel     (1989)
-<li>Cyberpunk: The Seraphim Files   (1990)
-<li>Dark Shadows (1992)
-<li>Dead Heat   (1990)
-<li>Deadfish Bedeviled      (1990)
-<li>Desert Storm: Send Hussein to Hell!     (1991)
-<li>Don Pendleton's Mack Bolan: The Executioner     (1993)
-<li>East Meets West     (1990)
-<li>Equinox Chronicles      (1991)
-<li>Forbidden Planet    (1992)
-<li>Freddy's Dead The Final Nightmare   (1991)
-<li>Gene Wolfe's The Shadow of the Torturer     (1991)
-<li>Gnatrat: The Movie  (1990)
-<li>Group Larue     (1989)
-<li>Headman     (1990)
-<li>Hero Alliance   (1989)
-<li>Innovation Spectacular  (1990)
-<li>Justice Machine     (1990)
-<li>Larry Harmon's Bozo, the World's Most Famous Clown  (1992)
-<li>Legends of the Stargrazers      (1989)
-<li>Lost in Space   (1991)
-<li>Lucifer's Hammer    (1993)
-<li>Lunatic Fringe  (1989)
-<li>Mangle Tangle Tales     (1990)
-<li>Masques     (1992)
-<li>Master of Rampling Gate     (1991)
-<li>Maze Agency     (1989)
-<li>Media*Starr     (1989)
-<li>Neon City   (1991)
-<li>New Justice Machine Mini-Series     (1989)
-<li>Newstralia      (1989)
-<li>A Nightmare on Elm Street: The Beginning    (1992)
-<li>Nightmares On Elm Street    (1991)
-<li>Overture    (1990)
-<li>Phantom of the Opera    (1991)
-<li>Piers Anthony's Incarnations of Immortality  (1991)
-<li>Power Factor    (1990)
-<li>Professor Om    (1990)
-<li>Quantum Leap    (1991)
-<li>Rocket Man: King of the Rocket Men  (1991)
-<li>Rocket Man: King of the Rocket Men      (1991)
-<li>Scaramouch      (1990)
-<li>Scarlet Kiss: The Vampyre   (1990)
-<li>Sentry Special      (1991)
-<li>Seraphim    (1990)
-<li>Sherlock Holmes: A Study in Scarlet     (1989)
-<li>Soulquest   (1989)
-<li>Straw Men   (1989)
-<li>Terry Pratchett's The Colour of Magic   (1991)
-<li>Terry Pratchett's The Light Fantastic   (1992)
-<li>Thundersaur     (1991)
-<li>Timedrifter     (1990)
-<li>Vigil (1992)
-<li>Walt Kelly's Santa Claus Adventures     (1990)
-<li>Wonder Worlds   (1992)
+<li><a href="Innovation1.jpg">3x3 Eyes</a> (1991)
+<li><a href="Innovation2.jpg">Ack the Barbarian</a>  (1991)
+<li><a href="Innovation3.jpg">Alex Nino’s Nightmare</a>   (1989)
+<li><a href="Innovation4.jpg">Alfred Hitchcock's Psycho</a>   (1992)
+<li><a href="Innovation5.jpg">All Hallow's Eve</a>    (1991)
+<li><a href="Innovation6.jpg">Angel of Death</a>  (1991)
+<li><a href="Innovation7.jpg">Angry Shadows</a>   (1989)
+<li><a href="Innovation8.jpg">Anne Rice's Interview with the Vampire</a>      (1991)
+<li><a href="Innovation9.jpg">Anne Rice's Queen of the Damned</a>     (1991)
+<li><a href="Innovation10.jpg">Anne Rice's The Vampire Lestat</a>  (1990)
+<li><a href="Innovation11.jpg">Anne Rice's The Vampire Lestat TPB</a>  (1991)
+<li><a href="Innovation12.jpg">Avenue X</a>    (1992)
+<li><a href="Innovation13.jpg">Beauty and the Beast</a>   (1993)
+<li><a href="Innovation14.jpg">Bill Ward's Torchy </a> (1991)
+<li><a href="Innovation15.jpg">Black &amp; White Magic</a>    (1991)
+<li><a href="Innovation16.jpg">Bruce Jones' Outer Edge</a>     (1993)
+<li><a href="Innovation17.jpg">Bruce Jones's Razor's Edge</a>   (1993)
+<li><a href="Innovation18.jpg">Cap'n Oatmeal</a>   (1990)
+<li><a href="Innovation18.jpg">Celestial Mechanics</a>  (1990)
+<li><a href="Innovation20.jpg">Child's Play 2</a>  (1991)
+<li><a href="Innovation21.jpg">Child's Play 3</a>  (1991)
+<li><a href="Innovation22.jpg">Child's Play The Series</a>   (1991)
+<li><a href="Innovation23.jpg">Cobalt Blue</a> (1989)
+<li><a href="Innovation24.jpg">Cyberpunk</a>   (1989)
+<li><a href="Innovation25.jpg">Cyberpunk Book Two </a> (1990)
+<li><a href="Innovation26.jpg">Cyberpunk: The Seraphim Files</a>   (1990)
+<li><a href="Innovation27.jpg">Dark Shadows</a> (1992)
+<li><a href="Innovation28.jpg">Dark Shadows Book 2</a> (1993)
+<li><a href="Innovation29.jpg">Dark Shadows Book 3</a> (1994)
+<li><a href="Innovation30.jpg">Dead Heat</a>   (1990)
+<li><a href="Innovation31.jpg">Deadfish Bedeviled</a> (1990)
+<li><a href="Innovation32.jpg">Desert Storm: Send Hussein to Hell!</a>   (1991)
+<li><a href="Innovation33.jpg">Don Pendleton's Mack Bolan: The Executioner</a>     (1993)
+<li><a href="Innovation34.jpg">East Meets West</a> (1990)
+<li><a href="Innovation35.jpg">Equinox Chronicles</a> (1991)
+<li><a href="Innovation36.jpg">Forbidden Planet</a>  (1992)
+<li><a href="Innovation37.jpg">Forbidden Planet: The Saga of the Krell</a>  (1992)
+<li><a href="Innovation38.jpg">Freddy's Dead The Final Nightmare</a> (1991)
+<li><a href="Innovation39.jpg">Freddy's Dead Movie Adaptation</a> (1991)
+<li><a href="Innovation40.jpg">Gene Wolfe's The Shadow of the Torturer</a> (1991)
+<li><a href="Innovation41.jpg">Gnatrat: The Movie</a>  (1990)
+<li><a href="Innovation42.jpg">Group Larue</a>     (1989)
+<li><a href="Innovation43.jpg">Headman</a>     (1990)
+<li><a href="Innovation44.jpg">Hero Alliance</a>   (1989)
+<li><a href="Innovation45.jpg">Innovation Spectacular</a>  (1990)
+<li><a href="Innovation46.jpg">Justice Machine</a>     (1990)
+<li><a href="Innovation47.jpg">Larry Harmon's Bozo, the World's Most Famous Clown  (1992)
+<li><a href="Innovation48.jpg">Legends of the Stargrazers</a>      (1989)
+<li><a href="Innovation49.jpg">Lost in Space</a>   (1991)
+<li><a href="Innovation50.jpg">Lucifer's Hammer</a>    (1993)
+<li><a href="Innovation51.jpg">Lunatic Fringe</a>  (1989)
+<li><a href="Innovation52.jpg">Mangle Tangle Tales</a>     (1990)
+<li><a href="Innovation53.jpg">Masques</a>     (1992)
+<li><a href="Innovation54.jpg">Master of Rampling Gate</a>     (1991)
+<li><a href="Innovation55.jpg">Maze Agency </a>    (1989)
+<li><a href="Innovation56.jpg">Media*Starr</a>     (1989)
+<li><a href="Innovation57.jpg">Neon City</a>   (1991)
+<li><a href="Innovation58.jpg">New Justice Machine Mini-Series</a>     (1989)
+<li><a href="Innovation59.jpg">Newstralia</a> (1989)
+<li><a href="Innovation60.jpg">Nightmare on Elm Street: The Beginning</a> (1992)
+<li><a href="Innovation61.jpg">Nightmares On Elm Street</a> (1991)
+<li><a href="Innovation62.jpg">Overture</a>    (1990)
+<li><a href="Innovation63.jpg">Phantom of the Opera</a>    (1991)
+<li><a href="Innovation64.jpg">Piers Anthony's Incarnations of Immortality</a>  (1991)
+<li><a href="Innovation65.jpg">Power Factor</a> (1990)
+<li><a href="Innovation66.jpg">Professor Om</a> (1990)
+<li><a href="Innovation67.jpg">Quantum Leap</a> (1991)
+<li><a href="Innovation68.jpg">Rocket Man: King of the Rocket Men</a> (1991)
+<li><a href="Innovation69.jpg">Scaramouch</a>  (1990)
+<li><a href="Innovation70.jpg">Scarlet Kiss: The Vampyre</a> (1990)
+<li><a href="Innovation71.jpg">Sentry Special</a> (1991)
+<li><a href="Innovation72.jpg">Seraphim</a>  (1990)
+<li><a href="Innovation73.jpg">Sherlock Holmes: A Study in Scarlet</a> (1989)
+<li><a href="Innovation74.jpg">Soulquest</a>  (1989)
+<li><a href="Innovation75.jpg">Straw Men</a>  (1989)
+<li><a href="Innovation76.jpg">Terry Pratchett's The Colour of Magic</a>   (1991)
+<li><a href="Innovation77.jpg">Terry Pratchett's The Light Fantastic</a>   (1992)
+<li><a href="Innovation78.jpg">Thundersaur</a>  (1991)
+<li><a href="Innovation79.jpg">Timedrifter</a>  (1990)
+<li><a href="Innovation80.jpg">Vigil</a> (1992)
+<li><a href="Innovation81.jpg">Walt Kelly's Santa Claus Adventures</a> (1990)
+<li><a href="Innovation82.jpg">Wonder Worlds</a> (1992)
 </p>
 
 </body>
