--- a/index.html
+++ b/index.html
@@ -2706,7 +2706,7 @@
 <td>Appleseed Databook</td>
 <td>1995</td>
 <td>Dark Horse</td>
-<td><a href="Appleseed/Appleseed.html">Details</a></td>
+<td><a href="Appleseed/appleseed.html">Details</a></td>
 </tr>
 
 <tr>
