--- a/index.html
+++ b/index.html
@@ -25857,6 +25857,13 @@
 </tr>
 
 <tr>
+<td>William Stout</td>
+<td>1949</td>
+<td>Creator</td>
+<td><a href="WilliamStout/WilliamStout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wild</td>
 <td>1954</td>
 <td>Atlas</td>
